# HFText

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
android-app/app/src/main/cpp/: CMakeLists.txt  hftext_android_jni.cpp
core/: CMakeLists.txt  README.md
core/build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hftext_core.slnx  hftext_core.vcxproj  hftext_core.vcxproj.filters  hftext_core_crc16_test.vcxproj  hftext_core_crc16_test.vcxproj.filters  hftext_core_demodulator_test.vcxproj  hftext_core_demodulator_test.vcxproj.filters  hftext_core_encoder_test.vcxproj  hftext_core_encoder_test.vcxproj.filters  hftext_core_frame_test.vcxproj  hftext_core_frame_test.vcxproj.filters  hftext_core_modulator_test.vcxproj  hftext_core_modulator_test.vcxproj.filters  hftext_core_types_test.vcxproj  hftext_core_types_test.vcxproj.filters
core/build-msvc/Debug/: hftext_core.lib
core/build-msvc/Testing/Temporary/: CTestCostData.txt
core/build-msvc/hftext_core.dir/Debug/hftext_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
core/build-msvc/hftext_core_crc16_test.dir/Debug/: hftext_core_crc16_test.exe.recipe  hftext_core_crc16_test.ilk
core/build-msvc/hftext_core_crc16_test.dir/Debug/hftext_c.017F2A45.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
core/build-msvc/hftext_core_demodulator_test.dir/Debug/: hftext_core_demodulator_test.exe.recipe  hftext_core_demodulator_test.ilk
core/build-msvc/hftext_core_demodulator_test.dir/Debug/hftext_c.4102E715.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
core/build-msvc/hftext_core_encoder_test.dir/Debug/: hftext_core_encoder_test.exe.recipe  hftext_core_encoder_test.ilk
core/build-msvc/hftext_core_encoder_test.dir/Debug/hftext_c.1E1A365A.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  hftext_core_encoder_test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
core/build-msvc/hftext_core_frame_test.dir/Debug/: hftext_core_frame_test.exe.recipe  hftext_core_frame_test.ilk
core/build-msvc/hftext_core_frame_test.dir/Debug/hftext_c.2628BC84.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
core/build-msvc/hftext_core_modulator_test.dir/Debug/: hftext_core_modulator_test.exe.recipe  hftext_core_modulator_test.ilk
core/build-msvc/hftext_core_modulator_test.dir/Debug/hftext_c.9AE0CBD0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
core/build-msvc/hftext_core_types_test.dir/Debug/: hftext_core_types_test.exe.recipe  hftext_core_types_test.ilk
core/build-msvc/hftext_core_types_test.dir/Debug/hftext_c.07742060.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  (+1 more)
core/build-z7/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hftext_core.slnx  hftext_core.vcxproj  hftext_core.vcxproj.filters  hftext_core_crc16_test.vcxproj  hftext_core_crc16_test.vcxproj.filters  hftext_core_demodulator_test.vcxproj  hftext_core_demodulator_test.vcxproj.filters  hftext_core_encoder_test.vcxproj  hftext_core_encoder_test.vcxproj.filters  hftext_core_frame_test.vcxproj  hftext_core_frame_test.vcxproj.filters  hftext_core_modulator_test.vcxproj  hftext_core_modulator_test.vcxproj.filters  hftext_core_types_test.vcxproj  hftext_core_types_test.vcxproj.filters
core/build-z7/Debug/: hftext_core.lib
core/build-z7/Testing/Temporary/: CTestCostData.txt
core/build-z7/hftext_core_crc16_test.dir/Debug/: hftext_core_crc16_test.exe.recipe  hftext_core_crc16_test.ilk
core/build-z7/hftext_core_encoder_test.dir/Debug/: hftext_core_encoder_test.exe.recipe  hftext_core_encoder_test.ilk
core/build-z7/hftext_core_frame_test.dir/Debug/: hftext_core_frame_test.exe.recipe  hftext_core_frame_test.ilk
core/build-z7/hftext_core_modulator_test.dir/Debug/: hftext_core_modulator_test.exe.recipe  hftext_core_modulator_test.ilk
core/build-z7/hftext_core_types_test.dir/Debug/: hftext_core_types_test.exe.recipe  hftext_core_types_test.ilk
core/include/: hftext_app_rx.h  hftext_app_settings.h  hftext_app_tx.h  hftext_audio_stats.h  hftext_c_api.h  hftext_config.h  hftext_core.h  hftext_crc16.h  hftext_demodulator.h  hftext_encoder.h  hftext_frame.h  hftext_modulator.h  hftext_result.h  hftext_robust.h  hftext_streaming_receiver.h  hftext_version.h
core/src/: app_rx.cpp  app_settings.cpp  app_tx.cpp  audio_stats.cpp  c_api.cpp  crc16.cpp  demodulator_fsk.cpp  encoder.cpp  frame.cpp  hftext_core.cpp  modulator_fsk.cpp  robust.cpp  streaming_receiver.cpp
core/tests/: test_app_rx.cpp  test_app_settings.cpp  test_app_tx.cpp  test_audio_stats.cpp  test_c_api.cpp  test_c_api_dynamic_load.cpp  test_c_api_header.c  test_c_api_shared_link.cpp  test_core_api.cpp  test_core_types.cpp  test_crc16.cpp  test_demodulator.cpp  test_encoder.cpp  test_frame.cpp  test_modulator.cpp  test_robust.cpp  test_streaming_receiver.cpp  test_wav_io.cpp
core/tools/: cli_args.h  hftext_rx_wav.cpp  hftext_stream_wav.cpp  hftext_tx_wav.cpp  wav_io.cpp  wav_io.h
pc-app/: AudioInput.cpp  AudioInput.h  AudioOutput.cpp  AudioOutput.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  ModemController.cpp  ModemController.h  WaterfallWidget.cpp  WaterfallWidget.h  hftext_pc.rc  main.cpp  resources.qrc
(+134 files in other folders)
